tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/exp-point-2.stderr
TOML parse error at line 1, column 17
  |
1 | exp-point-2 = 1.e2
  |                 ^
invalid floating-point number
expected digit
